Airflow/logs/dag_id=games/run_id=manual__2024-05-21T19:31:54.729607+00:00/task_id=load_data/attempt=1.log
[2024-05-21T19:36:39.189+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-05-21T19:36:39.204+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: games.load_data manual__2024-05-21T19:31:54.729607+00:00 [queued]>
[2024-05-21T19:36:39.208+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: games.load_data manual__2024-05-21T19:31:54.729607+00:00 [queued]>
[2024-05-21T19:36:39.208+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 1
[2024-05-21T19:36:39.216+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): load_data> on 2024-05-21 19:31:54.729607+00:00
[2024-05-21T19:36:39.223+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=148) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-05-21T19:36:39.224+0000] {standard_task_runner.py:63} INFO - Started process 157 to run task
[2024-05-21T19:36:39.224+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'games', 'load_data', 'manual__2024-05-21T19:31:54.729607+00:00', '--job-id', '563', '--raw', '--subdir', 'DAGS_FOLDER/get_main_games.py', '--cfg-path', '/tmp/tmp4d6l35wy']
[2024-05-21T19:36:39.225+0000] {standard_task_runner.py:91} INFO - Job 563: Subtask load_data
[2024-05-21T19:36:39.254+0000] {task_command.py:426} INFO - Running <TaskInstance: games.load_data manual__2024-05-21T19:31:54.729607+00:00 [running]> on host 631d4ab68173
[2024-05-21T19:36:39.307+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='games' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2024-05-21T19:31:54.729607+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-05-21T19:31:54.729607+00:00'
[2024-05-21T19:36:39.308+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-05-21T19:36:39.335+0000] {base.py:84} INFO - Using connection ID '***' for task execution.
[2024-05-21T19:36:39.792+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-05-21T19:36:39.792+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/plugins/steps/get_matches.py", line 157, in load_data
    hook.insert_rows(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 573, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: syntax error at or near "0"
LINE 1: INSERT INTO games (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,...
                           ^

[2024-05-21T19:36:39.799+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=games, task_id=load_data, execution_date=20240521T193154, start_date=20240521T193639, end_date=20240521T193639
[2024-05-21T19:36:39.813+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 563 for task load_data (syntax error at or near "0"
LINE 1: INSERT INTO games (0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,...
                           ^
; 157)
[2024-05-21T19:36:39.837+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-05-21T19:36:39.849+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-05-21T19:36:39.850+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
